# luca-board

./: .gitignore  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 3b6e2dd5d372_create_comment_model.py  48833cf070bd_default_value_of_is_published_field_is_.py  4b5eb594c3e9_add_has_image_flag_to_post_model.py  5796a5eb7b81_create_post_model.py  5ed790c5fd32_add_post_backref_relationship.py  63ef99594ca5_delete_post_imagemodel.py  70b56c2e9428_add_ondelete_set_null_on_foreignkey_of_.py  9c5379ddea77_define_likes_secondary_table.py  9f9fd2f6300c_create_user_model.py  adb8fa24130c_add_path_column_to_comment_model.py  c82371f555c8_add_ondelete_set_null_to_board_user_.py  ca044750b0f6_create_post_image_model.py  d6b07fda2143_create_user_model.py  ec62b3a8e500_create_account_table.py  fef0b6e1d1a0_create_board_model.py
app/: __init__.py  exceptions.py  helpers.py  mixins.py  models.py  queries.py  setup.py  views.py
app/boards/: models.py  schema.py  schemas.py  views.py
app/comments/: models.py  schemas.py  views.py
app/config/: config.py
app/posts/: models.py  schema.py  schemas.py  views.py
app/users/: models.py  schema.py  schemas.py  views.py
front/: package-lock.json  package.json
front/src/: index.html  styles.css
src/specup/: __init__.py  models.py
tests/: conftest.py  factories.py  test_boards.py  test_models.py  test_posts.py  test_specup.py  test_users.py
tests/boards/: factories.py  test_models.py  test_views.py
tests/comments/: factories.py  test_models.py  test_views.py
tests/posts/: factories.py  (+2 more)
(+105 files in other folders)
